--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,6 @@
+
 h1 a {
-  color: #FCA205;
+  color: #B3049B;
   font-family: 'Lobster';
 }
 
@@ -8,19 +9,24 @@ body {
 }
 
 .page-header {
-    background-color: #ff9400;
     margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    padding: 20px 20px 20px 400px;
+    background-image: url(http://thecutestblogontheblock.com/wp-content/uploads/2011/11/suppers-ready-free-cooking-blog-backgrounds-layouts-3c-copy.jpg);
+    height: 300px;
+    background-position: right center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: #8E5A9C;
     font-size: 36pt;
     text-decoration: none;
 }
 
 .content {
     margin-left: 40px;
+    color: B3049B;
 }
 
 h1, h2, h3, h4 {
@@ -34,14 +40,19 @@ h1, h2, h3, h4 {
 
 .save {
     float: right;
+    background-color: F0E5B6;
 }
 
 .post-form textarea, .post-form input {
     width: 100%;
 }
 
+p:hover {
+  color:  blue;
+}
+
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
+    color: #8E5A9C;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
@@ -49,8 +60,19 @@ h1, h2, h3, h4 {
 
 .post {
     margin-bottom: 70px;
+
+}
+
+p {
+  color: #8E5A9C;
+  line-height: 32px;
+  font-family: 'Lobster', sans-serif;
+  font-size: 20px;
+  font-weight: 100;
+  text-align:center;
+  background-color: F0E5B6;
 }
 
 .post h1 a, .post h1 a:visited {
-    color: #000000;
+    color: #B3049B;
 }
