--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,11 +1,11 @@
 {%load staticfiles%}
 <html>
   <head>
-      <title>Django Girsl blog</title>
+      <title>Anna Receptjei Blog</title>
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-      <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
       <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+      <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
   </head>
 
     <body>
@@ -13,12 +13,12 @@
         {% if user.is_authenticated %}
         <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         {% endif %}
-        <h1><a href="/">Django Girls Blog</a></h1>
+        <h1><a href="/">Anna Receptjei Blog</a></h1>
       </div>
 
       <div class="content container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
               {% block content %}
               {% endblock %}
               </div>
