--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,6 +18,14 @@
         <h1><a href="/">Anna Receptjei Blog</a></h1>
       </div>
 
+      <div class="row">
+        {%for category in XXX%}
+            <div class="col-md-3">
+              {{category.1}}
+            </div>
+        {% endfor %}
+      </div>
+
       <div class="content container">
         <div class="row">
             <div class="col-md-12">
