--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,15 +18,17 @@
         <h1><a href="/">Anna Receptjei Blog</a></h1>
       </div>
 
-      <div class="row">
-        {%for category in XXX%}
-            <div class="col-md-3">
-              {{category.1}}
-            </div>
-        {% endfor %}
-      </div>
 
-      <div class="content container">
+      <div class="container">
+        <div class="row">
+          {%for category in XXX%}
+          <div class="col-sm-2 top-menu_category">
+          <a href="{% url 'post_category_list' type=category.0 %}" class="">
+                {{category.1}}
+              </a></div>
+          {% endfor %}
+        </div>
+
         <div class="row">
             <div class="col-md-12">
               {% block content %}
